--- a/SeSac_PracticeTableView/Info.plist
+++ b/SeSac_PracticeTableView/Info.plist
@@ -16,7 +16,7 @@
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 					<key>UISceneStoryboardFile</key>
-					<string>City</string>
+					<string>NearCinema</string>
 				</dict>
 			</array>
 		</dict>
